Update javadoc and return unmodifiable set